[gd_scene load_steps=10 format=3 uid="uid://c4qs1178hbb1y"]

[ext_resource type="Script" uid="uid://cg5m2gffk5e60" path="res://macguffin.gd" id="1_3kvpb"]
[ext_resource type="Texture2D" uid="uid://bpsleu42uf1nc" path="res://Sprites/Objects/VFX-GlowLight1.png" id="2_3kvpb"]
[ext_resource type="Texture2D" uid="uid://otwv1kvt6de3" path="res://Sprites/Objects/Object-Pickup-Muffin.png" id="3_k5ty0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kax06"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3kvpb")
}],
"loop": true,
"name": &"Glow",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_6wrtd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_kysmn"]
resource_name = "rotate"
length = 8.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sdchj"]
_data = {
&"RESET": SubResource("Animation_6wrtd"),
&"rotate": SubResource("Animation_kysmn")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_ge3d5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_k5ty0")
}],
"loop": true,
"name": &"Rotate",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_h8ul0"]
radius = 5.0

[node name="iCoffee" type="Area2D"]
visibility_layer = 4
scale = Vector2(2.6, 2.6)
collision_mask = 2
script = ExtResource("1_3kvpb")

[node name="GlowVFX" type="AnimatedSprite2D" parent="."]
scale = Vector2(-0.0537218, -0.0537218)
sprite_frames = SubResource("SpriteFrames_kax06")
animation = &"Glow"
autoplay = "Glow"

[node name="AnimationPlayer" type="AnimationPlayer" parent="GlowVFX"]
libraries = {
&"": SubResource("AnimationLibrary_sdchj")
}
autoplay = "rotate"

[node name="MainSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.48, 0.48)
sprite_frames = SubResource("SpriteFrames_ge3d5")
animation = &"Rotate"
autoplay = "Rotate"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_h8ul0")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
